k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: procurve-modern
  namespace: procurve-modern
  labels:
    app.kubernetes.io/name: procurve-modern
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: procurve-modern
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30093
